k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terraform-operator-api
  namespace: tf-system
spec:
  replicas: 1
  selector:
    matchLabels:
      service: terraform-operator
      component: api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: terraform-operator
        component: api
    spec:
      serviceAccount: terraform-operator-api
      containers:
      - env:
        - name: PORT
          value: 0.0.0.0:5001
        - name: DB_URL
          # TESTING ONLY VALUES, MUST CHANGE FOR REAL USAGE
          value: postgres://pg:pass@database.default.svc:5432/crud
        - name: JWT_SIGNING_KEY
          value: chamgeMePle!ase
        - name: ADMIN_USERNAME
          value: isa
        - name: ADMIN_PASSWORD
          value: $2a$10$2ap6bphr5ZBkEMTBb/ZoT.zrY7lUwzCW2u1n5tIeVugtVpjMRW9Fe
        image: ghcr.io/galleybytes/terraform-operator-api:0.0.0
        imagePullPolicy: IfNotPresent
        name: api
        ports:
        - containerPort: 5001
          protocol: TCP
      restartPolicy: Always
