k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: terraform-operator
    component: api
  name: terraform-operator-api
  namespace: tf-system
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5001
  selector:
    service: terraform-operator
    component: api
  type: ClusterIP
