k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: terraform-operator-api
  namespace: tf-system
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/api/v1"
        backend:
          service:
            name: terraform-operator-api
            port:
              number: 80
